# PARTOPT-plus

./: .gitignore  README.md  environment.yml  environment_2.yml  intermediate.csv  pyproject.toml
examples/: assignments.npy  gaussian_example_on_grid.py  gaussian_on_grid.R  line_profile.txt  poisson_example_on_grid.py
src/partopt_plus/: Particle.py  Particle_MCAR.py  Particle_Poisson.py  Partition_Searcher.py  Poisson_Partition_Searcher.py  connected_Particle.py  utils.py
