[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "partopt-plus"
version = "0.1.0"
description = "PARTOPT+ optimisation framework"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "networkx",
    "scikit-learn",
    "joblib",
    "statsmodels",
    "pandas"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
